[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/gut/gui/OutputText.gd" type="Script" id=1]

[sub_resource type="Image" id=3]
data = {
"data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ),
"format": "LumAlpha8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id=2]
flags = 4
flags = 4
image = SubResource( 3 )
size = Vector2( 16, 16 )

[node name="OutputText" type="VBoxContainer"]
margin_right = 862.0
margin_bottom = 523.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="Toolbar" type="HBoxContainer" parent="."]
margin_right = 862.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="ShowSearch" type="ToolButton" parent="Toolbar"]
margin_right = 28.0
margin_bottom = 24.0
toggle_mode = true
icon = SubResource( 2 )

[node name="UseColors" type="ToolButton" parent="Toolbar"]
margin_left = 32.0
margin_right = 60.0
margin_bottom = 24.0
hint_tooltip = "Colorize output. 
 It's not the same as everywhere else (long story),
 but it is better than nothing."
toggle_mode = true
pressed = true
icon = SubResource( 2 )

[node name="WordWrap" type="ToolButton" parent="Toolbar"]
margin_left = 64.0
margin_right = 92.0
margin_bottom = 24.0
hint_tooltip = "Word wrap"
toggle_mode = true
icon = SubResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="Toolbar"]
margin_left = 96.0
margin_right = 743.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="CopyButton" type="Button" parent="Toolbar"]
margin_left = 747.0
margin_right = 798.0
margin_bottom = 24.0
hint_tooltip = "Copy to clipboard"
text = " Copy "

[node name="ClearButton" type="Button" parent="Toolbar"]
margin_left = 802.0
margin_right = 862.0
margin_bottom = 24.0
text = "  Clear  "

[node name="Output" type="TextEdit" parent="."]
margin_top = 28.0
margin_right = 862.0
margin_bottom = 523.0
size_flags_horizontal = 3
size_flags_vertical = 3
readonly = true
highlight_current_line = true
syntax_highlighting = true
show_line_numbers = true
smooth_scrolling = true

[node name="Search" type="HBoxContainer" parent="."]
visible = false
margin_top = 499.0
margin_right = 862.0
margin_bottom = 523.0

[node name="SearchTerm" type="LineEdit" parent="Search"]
margin_right = 804.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="SearchNext" type="Button" parent="Search"]
margin_left = 808.0
margin_right = 862.0
margin_bottom = 24.0
hint_tooltip = "Find next (enter)"
text = "Next"

[node name="SearchPrev" type="Button" parent="Search"]
margin_left = 808.0
margin_right = 820.0
margin_bottom = 20.0
hint_tooltip = "Find previous (shift + enter)"
text = "Prev"

[connection signal="pressed" from="Toolbar/ShowSearch" to="." method="_on_ShowSearch_pressed"]
[connection signal="pressed" from="Toolbar/UseColors" to="." method="_on_UseColors_pressed"]
[connection signal="pressed" from="Toolbar/WordWrap" to="." method="_on_WordWrap_pressed"]
[connection signal="pressed" from="Toolbar/CopyButton" to="." method="_on_CopyButton_pressed"]
[connection signal="pressed" from="Toolbar/ClearButton" to="." method="_on_ClearButton_pressed"]
[connection signal="focus_entered" from="Search/SearchTerm" to="." method="_on_SearchTerm_focus_entered"]
[connection signal="gui_input" from="Search/SearchTerm" to="." method="_on_SearchTerm_gui_input"]
[connection signal="text_changed" from="Search/SearchTerm" to="." method="_on_SearchTerm_text_changed"]
[connection signal="text_entered" from="Search/SearchTerm" to="." method="_on_SearchTerm_text_entered"]
[connection signal="pressed" from="Search/SearchNext" to="." method="_on_SearchNext_pressed"]
[connection signal="pressed" from="Search/SearchPrev" to="." method="_on_SearchPrev_pressed"]
